# tinker-agent

./: .env.example  .gitignore  README.md  deploy.py  main.py  prompt.md  pyproject.toml  todo.md  viewer.html
.github/workflows/: test.yml
eval/: next.md  run_benchmark.py  tinkerbench.jsonl
eval/data-sample/: 2025-04-cancer-ai-alliance.md  2025-04-google-cloud-next.md  2025-04-olmotrace.md  2025-07-flexolmo.md  2025-07-sciarena.md  2025-08-asta.md  2025-08-molmoact.md  2025-10-asta-datavoyager.md  2025-11-olmo-3.md  2025-11-olmoearth-foundation-model.md  2025-11-olmoearth-platform.md  2025-12-molmo-2.md  tm-2025-09-defeating-nondeterminism-llm-inference.md  tm-2025-09-modular-manifolds.md  tm-2025-10-announcing-tinker.md  tm-2025-10-on-policy-distillation.md  tm-2025-10-tinker-research-teaching-grants.md  tm-2025-11-call-for-community-projects.md  tm-2025-12-tinker-general-availability.md
src/tinker_agent/: agent.py  cli.py  entry.py  eval.py  main.py  sandbox.py  tracer.py  viewer.py
src/tinker_agent/ui/: viewer.py
src/tinker_agent/utils/: verifier.py
tests/: test_agent.py  test_eval.py
