[project]
name = "tinker-agent"
version = "0.1.0"
description = "Tinker Post Training Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chz>=0.4.0",
    "claude-agent-sdk>=0.1.18",
    "daytona>=0.128.1",
    "rich>=14.2.0",
    "streamlit>=1.40.0",
    "streamlit-autorefresh>=1.0.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
tinker-agent = "tinker_agent.main:main"
tinker-viewer = "tinker_agent.viewer_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tinker_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "runs/20260109_204441",
    "runs/20260109_205759",
    "runs/20260109_210657",
    "runs/20260109_212310",
    "runs/20260109_213106",
]
