[project]
name = "tinker-agent"
version = "0.1.7"
description = "Intelligent agent for Anthropic's Tinker fine-tuning platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anthropic", email = "support@anthropic.com" }]
keywords = ["anthropic", "tinker", "fine-tuning", "llm", "claude", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chz>=0.4.0",
    "claude-agent-sdk>=0.1.18",
    "huggingface-hub>=1.3.1",
    "rich>=14.2.0",
    "ruff>=0.14.11",
    "streamlit>=1.40.0",
    "streamlit-autorefresh>=1.0.1",
    "ty>=0.0.11",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "build>=1.0.0", "twine>=4.0.0"]

[project.scripts]
tinker-agent = "tinker_agent.entry:main"
tinker-agent-setup = "tinker_agent.ui.cli:setup"
tinker-agent-viewer = "tinker_agent.ui.cli:viewer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinker_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.workspace]
members = []
